--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,11 @@
 
+
 services:
   - type: web
     name: zoeta-rag-api
     env: python
     buildCommand: ""
-    startCommand: "uvicorn app.main:app --host 0.0.0.0 --port 8080"
+    startCommand: "uvicorn main:app --host 0.0.0.0 --port 8080"
     plan: free
     autoDeploy: true
+
