--- a/render.yaml
+++ b/render.yaml
@@ -1,5 +1,3 @@
-
-
 services:
   - type: web
     name: zoeta-rag-api
@@ -8,4 +6,4 @@ services:
     startCommand: "uvicorn main:app --host 0.0.0.0 --port 8080"
     plan: free
     autoDeploy: true
-
+    rootDir: .
