Fix: Use $PORT in startCommand

--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: zoeta-rag-api
     env: python
     buildCommand: ""
-    startCommand: "uvicorn app.main:app --host 0.0.0.0 --port 8080"
+    startCommand: "uvicorn app.main:app --host 0.0.0.0 --port $PORT"
     plan: free
     autoDeploy: true
     rootDir: .
