--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: zoeta-rag-api
     env: python
     buildCommand: ""
-    startCommand: "uvicorn app.main:app --host 0.0.0.0 --port $PORT"
+    startCommand: "uvicorn main:app --host 0.0.0.0 --port $PORT"
     plan: free
     autoDeploy: true
-    rootDir: .
+    rootDir: app
